Добавил пустые функции для работы с базой данных

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -95,7 +95,7 @@
 
             <section class="habits block card">
                 <div class="card-head">
-                    <div class="section-title">Ежедневные задачи</div>
+                    <div class="section-title">Привычки</div>
                     <button class="icon-btn">
                         <img
                             src="https://cdn-icons-png.flaticon.com/512/1828/1828919.png"
