Добавил проверку целостности username

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,6 +23,7 @@
             <section class="avatar block card">
                 <img src="{{ user.avatar }}" alt="Аватар" class="avatar-img" />
                 <div class="nickname">{{ user.nickname }}</div>
+                <div class="username">@{{ user.username }}</div>
             </section>
 
             <section class="rating block card">
